--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -17,6 +17,14 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: marcosrodriguessilva
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: marcosrodriguessilva/go_ci:${{ github.ref_name }}
 
