--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,15 +42,18 @@ jobs:
 
   build:
     needs: test
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: ['ubuntu-latest', 'ubuntu-20.04']
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
     - name: Build
       run: go build -v main.go
+
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: program
+        path: main
 
   docker:
     needs: build
