--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -14,6 +14,11 @@ jobs:
     - name: Setup Docker Build
       uses: docker/setup-buildx-action@v3
 
+    - name: Download Build Artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: program
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
